Fixed content visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -345,7 +345,7 @@ input, select, textarea {
 	  }
   
 	  .content.show {
-		max-height: 1000px; 
+		max-height: 2000px; 
 	  }
 	  .backGr-span{
 		background-color: #454545;
